--- a/vaja1/vaja1.csproj
+++ b/vaja1/vaja1.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Algorithm.cs" />
     <Compile Include="HillClimbing.cs" />
+    <Compile Include="ParticleSolution.cs" />
     <Compile Include="Problem.cs" />
     <Compile Include="Problems\Ackley.cs" />
     <Compile Include="Problems\Bukin.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Problems\Trid.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PSO.cs" />
     <Compile Include="Solution.cs" />
   </ItemGroup>
   <ItemGroup>
